feat: update skills and projects sections
- Add new skills to the skills section.
- Update project titles, descriptions, and images for readability and consistency.
- Refactor class names for better maintainability.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reshawn Lofters</title>
-    <link rel="icon" type="x-icon" href="images/website-logo.png">
+	<title>Reshawn Lofters</title>
+
+	<link rel="icon" type="x-icon" href="images/website-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,16 +21,17 @@
     <link rel="stylesheet" href="styles/projects.css">
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
-    <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
+
+	<script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="scripts/shared/general.js" defer></script>
     <script src="scripts/contact.js" defer></script>
 </head>
-</body>
+<body>
     <header class="header" id="header">
         <nav>
-            <a href="#home" class="nav-logo">
+            <a href="#home" class="nav-menu-logo">
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
@@ -46,176 +48,193 @@
         </nav>
     </header>
 
-    <section class="home" id="home">
-        <div class="section-container">
-            <div>
-                <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
-                <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
-                <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
-                <p>
-                    I am passionate about Software Engineering and using technology to solve real-world problems.
-                </p>
-                <div>
-                    <a href="#contact">
-                        <button class="contact-me-button button-primary">Contact Me</button>
-                    </a>
-                    <!-- <a href="images/Reshawn Lofters Resume.pdf" target="_blank" download>
-                        <button class="resume-button">Resume <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                    </a> -->
-                </div>
-            </div>
-            <img src="images/astronaut-flying-with-balloon.png" alt="astronaut-riding-on-rocket">
-        </div>
-    </section>
+	<main>
+		<section class="home" id="home">
+			<div class="section-container">
+				<div>
+					<h6 class="name-tag">&#8212; Reshawn Lofters</h6>
+					<h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
+					<h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
+					<p>
+						I am passionate about Software Engineering and using technology to solve real-world problems.
+					</p>
+					<div>
+						<a href="#contact">
+							<button class="contact-me-button button-primary">Contact Me</button>
+						</a>
+						<!-- <a href="images/Reshawn Lofters Resume.pdf" target="_blank" download>
+							<button class="resume-button">Resume <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+						</a> -->
+					</div>
+				</div>
+				<img src="images/astronaut-flying-with-balloon.png" alt="astronaut-riding-on-rocket">
+			</div>
+		</section>
 
-    <section class="about" id="about">
-        <div class="section-container">
-            <img src="images/astronaut-flying-with-balloon.webp" alt="astronaut-riding-on-rocket">
-            <div>
-                <h1 class="section-title">About Me</h1><hr/>
-                <p>
-                    My journey as a Computer Science student at Ontario Tech University has equipped me with a strong 
-                    background in data structures, algorithms, logical reasoning, and effective communication, honed 
-                    through work experiences and projects.<br><br>I am enthusiastic about exploring Software Engineering 
-                    internships to apply my knowledge and skills toward business solutions and fostering innovation.
-                </p>
-                <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
-                    <button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                </a>
-            </div>
-        </div>
-    </section>
+		<section class="about" id="about">
+			<div class="section-container">
+				<img src="images/astronaut-flying-with-balloon.webp" alt="astronaut-riding-on-rocket">
+				<div>
+					<h1 class="section-title">About Me</h1><hr/>
+					<p>
+						My journey as a Computer Science student at Ontario Tech University has equipped me with a strong
+						background in data structures, algorithms, logical reasoning, and effective communication, honed
+						through work experiences and projects.<br><br>I am enthusiastic about exploring Software Engineering
+						internships to apply my knowledge and skills toward business solutions and fostering innovation.
+					</p>
+					<a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
+						<button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+					</a>
+				</div>
+			</div>
+		</section>
 
-    <section class="skills" id="skills">
-        <div class="section-container">
-            <h1 class="section-title">Technical Skills</h1><hr/>
-            <div class="skill-icon-container">
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="java icon"><hr/>
-                    <label>Java</label>
-                </div>
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python icon"><hr/>
-                    <label>Python</label>
-                </div>
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus icon"><hr/>
-                    <label>C++</label>
-                </div>
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5 icon"><hr/>
-                    <label>HTML</label>
-                </div>
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="css3 icon"><hr/>
-                    <label>CSS</label>
-                </div>
-                <div>
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript icon"><hr/>
-                    <label>JavaScript</label>
-                </div>
-            </div>
-        </div>
-    </section>
+		<section class="skills" id="skills">
+			<div class="section-container">
+				<h1 class="section-title">Technical Skills</h1><hr/>
+				<div class="skills-icons-container">
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="java icon"><hr/>
+						<label>Java</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python icon"><hr/>
+						<label>Python</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus icon"><hr/>
+						<label>C++</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5 icon"><hr/>
+						<label>HTML</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="css3 icon"><hr/>
+						<label>CSS</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript icon"><hr/>
+						<label>JavaScript</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azure/azure-original.svg" alt="azure icon"/><hr/>
+						<label>Azure</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="git icon"/><hr/>
+						<label>Git</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="github icon"/><hr/>
+						<label>GitHub</label>
+					</div>
+				</div>
+			</div>
+		</section>
 
-    <section class="projects" id="projects">
-        <div class="section-container">
-            <h1 class="section-title">Projects</h1><hr/>
-            <div class="project-container">
-                <a href="https://computestore.ca" target="_blank">
-                    <img class="project-img" src="images/project-1-img.png" alt="project image">
-                </a>
-                <div class="project-info-container">
-                    <h3 class="project-title">Compute (E-commerce Store)</h3>
-                    <p>
-                        Explore the Compute Store and browse the wide range of tech products and available features.
-                    </p><hr/>
-                    <div class="project-tools-container">
-                        <i class="devicon-html5-plain colored"></i>
-                        <i class="bi bi-dot"></i>
-                        <i class="devicon-css3-plain colored"></i>
-                        <i class="bi bi-dot"></i>
-                        <i class="devicon-javascript-plain colored"></i>
-                    </div>
-                    <div>
-                        <a href="https://computestore.ca"  target="_blank">
-                            <button class="live-demo-button button-primary">Live Demo</button>
-                        </a>
-                        <a href="https://github.com/reshawnlofters/e-commerce-store" target="_blank">
-                            <button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="project-container">
-                <a href="https://github.com/reshawnlofters/tech-billionaires-analysis/blob/main/tech-billionaires-analysis.ipynb" target="_blank">
-                    <img class="project-img" src="images/project-2-img.jpg" alt="project image">
-                </a>
-                <div class="project-info-container">
-                    <h3 class="project-title">Tech Billionaires Analysis</h3>
-                    <p>
-                        Explore the analysis of tech billionaires to gain insights into the trajectory of the tech industry.
-                    </p><hr/>
-                    <div class="project-tools-container">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
-                        <i class="bi bi-dot"></i>
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" />
-                        <i class="bi bi-dot"></i>
-                        <img src="images/seaborn-logo.png" alt="seaborn logo">
-                        <i class="bi bi-dot"></i>
-                        <img src="images/matplotlib-logo.png" alt="matplotlib logo">
-                    </div>
-                    <div>
-                        <a href="https://github.com/reshawnlofters/tech-billionaires-analysis/blob/main/tech-billionaires-analysis.ipynb" target="_blank">
-                            <button class="live-demo-button button-primary">Live Demo</i></button>
-                        </a>
-                        <a href="https://github.com/reshawnlofters/tech-billionaires-analysis" target="_blank">
-                            <button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+		<section class="projects" id="projects">
+			<div class="section-container">
+				<h1 class="section-title">Projects</h1><hr/>
+				<div class="project-container">
+					<a href="https://computestore.ca" target="_blank">
+						<img class="project-img" src="images/project-1-img.png" alt="project image">
+					</a>
+					<div class="project-info-container">
+						<h3 class="project-title">Compute Store</h3>
+						<p>
+							Explore the Compute Store, an e-commerce site where you can shop for the latest tech products.
+						</p>
+						<hr/>
+						<div class="project-tools-container">
+							<i class="devicon-html5-plain colored"></i>
+							<i class="bi bi-dot"></i>
+							<i class="devicon-css3-plain colored"></i>
+							<i class="bi bi-dot"></i>
+							<i class="devicon-javascript-plain colored"></i>
+						</div>
+						<div>
+							<a href="https://computestore.ca"  target="_blank">
+								<button class="live-demo-button button-primary">Live Demo</button>
+							</a>
+							<a href="https://github.com/reshawnlofters/e-commerce-store" target="_blank">
+								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+							</a>
+						</div>
+					</div>
+				</div>
 
-    <section class="contact" id="contact">
-        <div class="section-container">
-            <h1 class="section-title">Contact Me</h1><hr/>
-            <div class="contact-form-container">
-                <form action="" class="contact-form" id="contactForm" novalidate>
-                    <div class="name-email-row">
-                        <div class="form-field">
-                            <label for="name-field">Name</label>
-                            <input type="text" name="name-field" id="nameField">
-                            <small class="name-field-error-message"></small>
-                        </div>
-                        <div class="form-field">
-                            <label for="email-field">Email</label>
-                            <input type="email" name="email-field" id="emailField">
-                            <small class="email-field-error-message"></small>
-                        </div>
-                    </div>
-                    <div class="form-field">
-                        <label for="subject-field">Subject</label>
-                        <input type="text" name="subject-field" id="subjectField">
-                        <small class="subject-field-error-message"></small>
-                    </div>
-                    <div class="form-field">
-                        <label for="message-field">Message</label>
-                        <textarea name="message-field" id="messageField" rows="7"></textarea>
-                        <small class="message-field-error-message"></small>
-                        <div class="message-field-char-counter">
-                            <span class="message-field-char-count">0</span>
-                            <span class="message-field-limit-number">/1000</span>
-                        </div>
-                    </div>
-                    <p class="form-submit-message" id="formSubmitMessage"></p>
+				<div class="project-container">
+					<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
+						<img class="project-img" src="images/project-2-img.jpg" alt="project image">
+					</a>
+					<div class="project-info-container">
+						<h3 class="project-title">Tech Industry Billionaires Analysis</h3>
+						<p>
+							Explore an analysis of tech industry billionaires to gain insights into the industry's trajectory.
+						</p>
+						<hr/>
+						<div class="project-tools-container">
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+							<i class="bi bi-dot"></i>
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" />
+							<i class="bi bi-dot"></i>
+							<img src="images/seaborn-logo.png" alt="seaborn logo">
+							<i class="bi bi-dot"></i>
+							<img src="images/matplotlib-logo.png" alt="matplotlib logo">
+						</div>
+						<div>
+							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis/blob/main/tech-industry-billionaires-analysis.ipynb" target="_blank">
+								<button class="live-demo-button button-primary">Live Demo</i></button>
+							</a>
+							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
+								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-                    <button class="form-submit-button button-primary" type="submit">Submit <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                </form>
-            </div>
-        </div>
-    </section>
+		<section class="contact" id="contact">
+			<div class="section-container">
+				<h1 class="section-title">Contact Me</h1><hr/>
+				<div class="contact-form-container">
+					<form action="" class="contact-form" id="contactForm" novalidate>
+						<div class="name-email-row">
+							<div class="form-field">
+								<label for="name-field">Name</label>
+								<input type="text" name="name-field" id="nameField">
+								<small class="name-field-error-message"></small>
+							</div>
+							<div class="form-field">
+								<label for="email-field">Email</label>
+								<input type="email" name="email-field" id="emailField">
+								<small class="email-field-error-message"></small>
+							</div>
+						</div>
+						<div class="form-field">
+							<label for="subject-field">Subject</label>
+							<input type="text" name="subject-field" id="subjectField">
+							<small class="subject-field-error-message"></small>
+						</div>
+						<div class="form-field">
+							<label for="message-field">Message</label>
+							<textarea name="message-field" id="messageField" rows="7"></textarea>
+							<small class="message-field-error-message"></small>
+							<div class="message-field-char-counter">
+								<span class="message-field-char-count">0</span>
+								<span class="message-field-limit-number">/1000</span>
+							</div>
+						</div>
+						<p class="form-submit-message" id="formSubmitMessage"></p>
+
+						<button class="form-submit-button button-primary" type="submit">Submit <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+					</form>
+				</div>
+			</div>
+		</section>
+	</main>
 
     <footer class="footer">
         <div class="section-container">
