feat: update header and footer sections
- Make header background colour solid on page scroll for better clarity.
- Align footer copyright notice to flex-end for consistency.
- Increase font size of website buttons for better readability.

--- a/index.html
+++ b/index.html
@@ -246,9 +246,11 @@
                     Software Developer
                 </h2>
             </div>
-            <p class="copyright-notice">
-                &copy; Reshawn Lofters <span id="currentYear"></span>. All rights reserved.
-            </p>
+			<div class="copyright-notice-container">
+				<p class="copyright-notice">
+					&copy; Reshawn Lofters <span id="currentYear"></span>. All rights reserved.
+				</p>
+			</div>
         </div>
     </footer>
 </body>
