refactor: reorganize HTML element CSS properties
- Rearrange CSS properties of HTML elements for continuity and consistency.
- Remove duplicate CSS styling for optimization.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<a href="https://computestore.ca" target="_blank">
 						<img class="project-img" src="images/project-1-img.png" alt="project image">
 					</a>
-					<div class="project-info-container">
+					<div class="project-details-container">
 						<h3 class="project-title">Compute Store</h3>
 						<p>
 							Explore the Compute Store, an e-commerce site where you can shop for the latest tech products.
@@ -168,7 +168,7 @@
 					<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
 						<img class="project-img" src="images/project-2-img.jpg" alt="project image">
 					</a>
-					<div class="project-info-container">
+					<div class="project-details-container">
 						<h3 class="project-title">Tech Industry Billionaires Analysis</h3>
 						<p>
 							Explore an analysis of tech industry billionaires to gain insights into the industry's trajectory.
