refactor: update about section and README
- Revise about section paragraph for consistency.
- Update README for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
 					<p>
 						My journey as a Computer Science student at Ontario Tech University has equipped me with a strong
 						background in data structures, algorithms, logical reasoning, and effective communication, honed
-						through work experiences and projects.<br><br>I am enthusiastic about exploring Software Engineering
-						internships to apply my knowledge and skills toward business solutions and fostering innovation.
+						through work experiences and projects.
+						<br><br>
+						I am eager to explore Software Engineering internships to apply my knowledge and
+						skills to develop software solutions and foster innovation.
 					</p>
 					<a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
 						<button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
