refactor: enhance JavaScript file code structure and comments
- Enhance code structure and comments for improved readability and maintainability.
- Add function header comments for improved clarity and maintainability.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div>
 					<h6 class="name-tag">&#8212; Reshawn Lofters</h6>
 					<h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
-					<h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
+					<h2 class="role-heading">I am a Software <br><span class="multi-text-effect">Developer</span></h2>
 					<p>
 						I am passionate about Software Engineering and using technology to solve real-world problems.
 					</p>
@@ -250,7 +250,7 @@
             </div>
 			<div class="copyright-notice-container">
 				<p class="copyright-notice">
-					&copy; Reshawn Lofters <span id="currentYear"></span>. All rights reserved.
+					&copy; Reshawn Lofters <span id="copyrightYear"></span>. All rights reserved.
 				</p>
 			</div>
         </div>
