refactor: enhance site responsiveness
- Enhance site responsiveness to improve the user experience.
- Rename 'query.css' file to 'media-query.css' for improved clarity.
- Update HTML labels and add alt attributes for consistency and maintainability.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles/shared/general.css">
-    <link rel="stylesheet" href="styles/shared/query.css">
+    <link rel="stylesheet" href="styles/shared/media-query.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/about.css">
@@ -177,9 +177,9 @@
 						</p>
 						<hr/>
 						<div class="project-tools-container">
-							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python logo"/>
 							<i class="bi bi-dot"></i>
-							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" />
+							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" alt="pandas logo"/>
 							<i class="bi bi-dot"></i>
 							<img src="images/seaborn-logo.png" alt="seaborn logo">
 							<i class="bi bi-dot"></i>
@@ -187,7 +187,7 @@
 						</div>
 						<div>
 							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis/blob/main/tech-industry-billionaires-analysis.ipynb" target="_blank">
-								<button class="live-demo-button button-primary">Live Demo</i></button>
+								<button class="live-demo-button button-primary">Live Demo</button>
 							</a>
 							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
 								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
@@ -205,23 +205,23 @@
 					<form action="" class="contact-form" id="contactForm" novalidate>
 						<div class="name-email-row">
 							<div class="form-field">
-								<label for="name-field">Name</label>
+								<label for="nameField">Name</label>
 								<input type="text" name="name-field" id="nameField">
 								<small class="name-field-error-message"></small>
 							</div>
 							<div class="form-field">
-								<label for="email-field">Email</label>
+								<label for="emailField">Email</label>
 								<input type="email" name="email-field" id="emailField">
 								<small class="email-field-error-message"></small>
 							</div>
 						</div>
 						<div class="form-field">
-							<label for="subject-field">Subject</label>
+							<label for="subjectField">Subject</label>
 							<input type="text" name="subject-field" id="subjectField">
 							<small class="subject-field-error-message"></small>
 						</div>
 						<div class="form-field">
-							<label for="message-field">Message</label>
+							<label for="messageField">Message</label>
 							<textarea name="message-field" id="messageField" rows="7"></textarea>
 							<small class="message-field-error-message"></small>
 							<div class="message-field-char-counter">
