style: enhance skills and projects section clarity
- Rearrange technical skills.
- Update projects section project description.

--- a/index.html
+++ b/index.html
@@ -100,12 +100,8 @@
 						<label>Java</label>
 					</div>
 					<div>
-						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python icon"><hr/>
-						<label>Python</label>
-					</div>
-					<div>
-						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus icon"><hr/>
-						<label>C++</label>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript icon"><hr/>
+						<label>JavaScript</label>
 					</div>
 					<div>
 						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5 icon"><hr/>
@@ -116,13 +112,14 @@
 						<label>CSS</label>
 					</div>
 					<div>
-						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript icon"><hr/>
-						<label>JavaScript</label>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python icon"><hr/>
+						<label>Python</label>
 					</div>
 					<div>
-						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azure/azure-original.svg" alt="azure icon"/><hr/>
-						<label>Azure</label>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus icon"><hr/>
+						<label>C++</label>
 					</div>
+
 					<div>
 						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="git icon"/><hr/>
 						<label>Git</label>
@@ -130,6 +127,10 @@
 					<div>
 						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="github icon"/><hr/>
 						<label>GitHub</label>
+					</div>
+					<div>
+						<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azure/azure-original.svg" alt="azure icon"/><hr/>
+						<label>Azure</label>
 					</div>
 				</div>
 			</div>
@@ -145,7 +146,7 @@
 					<div class="project-details-container">
 						<h3 class="project-title">Compute Store</h3>
 						<p>
-							Explore the Compute Store, an e-commerce site where you can shop for the latest tech products.
+							Explore the Compute Store, an e-commerce store simulator where you can shop for the latest tech products.
 						</p>
 						<hr/>
 						<div class="project-tools-container">
