chore: refine README and update About Me and Projects sections
- Refined text in the README for clarity.
- Updated text in the About Me and Projects sections for refinement.
- Adjusted padding in the Projects section to accommodate additional text.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
 				<div>
 					<h1 class="section-title">About Me</h1><hr/>
 					<p>
-						My journey as a Computer Science student at Ontario Tech University has equipped me with a strong
-						background in data structures, algorithms, logical reasoning, and effective communication, honed
-						through work experiences and projects.
+						I am a third-year Computer Science student at Ontario Tech University with a strong background in data structures, algorithms, logical reasoning, and effective communication, developed through work experiences and projects.
 						<br><br>
-						I am eager to explore Software Engineering internships to apply my knowledge and
-						skills to develop software solutions and foster innovation.
+						I am eager to explore Software Engineering internships to apply my technical skills and knowledge in developing software solutions.
 					</p>
 					<a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
 						<button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
@@ -172,9 +169,9 @@
 						<img class="project-img" src="images/project-2-img.jpg" alt="project image">
 					</a>
 					<div class="project-details-container">
-						<h3 class="project-title">Tech Industry Billionaires Analysis</h3>
+						<h3 class="project-title">Tech Industry Billionaires Data Analysis</h3>
 						<p>
-							Explore an analysis of tech industry billionaires to gain insights into the industry's trajectory.
+							Explore an analysis of tech industry billionaire data to gain sector insights.
 						</p>
 						<hr/>
 						<div class="project-tools-container">
