update: add new project to projects section
- Added a new project to the project section.
- Renamed image file names and HTML elements from 'img' to 'image'
  for improved clarity.
- Updated README

--- a/index.html
+++ b/index.html
@@ -138,26 +138,58 @@
 				<h1 class="section-title">Projects</h1><hr/>
 				<div class="project-container">
 					<a href="https://computestore.ca" target="_blank">
-						<img class="project-img" src="images/project-1-img.png" alt="project image">
+						<img class="project-image" src="images/project-1-image.png" alt="project image">
 					</a>
 					<div class="project-details-container">
-						<h3 class="project-title">Compute Store</h3>
+						<h3 class="project-title">Compute Store: E-commerce Store Simulator</h3>
 						<p>
-							Explore the Compute Store, an e-commerce store simulator where you can shop for the latest tech products.
+							An e-commerce simulator where users can shop for the latest tech products.
 						</p>
 						<hr/>
 						<div class="project-tools-container">
+							<i class="devicon-javascript-plain colored"></i>
+							<i class="bi bi-dot"></i>
 							<i class="devicon-html5-plain colored"></i>
 							<i class="bi bi-dot"></i>
 							<i class="devicon-css3-plain colored"></i>
-							<i class="bi bi-dot"></i>
-							<i class="devicon-javascript-plain colored"></i>
 						</div>
 						<div>
 							<a href="https://computestore.ca"  target="_blank">
-								<button class="live-demo-button button-primary">Live Demo</button>
+								<button class="demo-button button-primary">Demo</button>
 							</a>
 							<a href="https://github.com/reshawnlofters/e-commerce-store" target="_blank">
+								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+							</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="project-container">
+					<a href="https://github.com/reshawnlofters/youbudget" target="_blank">
+						<img class="project-image" src="images/project-2-image.png" alt="project image">
+					</a>
+					<div class="project-details-container">
+						<h3 class="project-title">YouBudget: Income and Expense Tracker</h3>
+						<p>
+							An income and expense tracker where users can input financial data, visualize monthly transactions, and evaluate their financial status.
+						</p>
+						<hr/>
+						<div class="project-tools-container">
+            				<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+							<i class="bi bi-dot"></i>
+							<i class="devicon-javascript-plain colored"></i>
+							<i class="bi bi-dot"></i>
+							<img src="images/chart-js-logo.png">
+							<i class="bi bi-dot"></i>
+							<i class="devicon-html5-plain colored"></i>
+							<i class="bi bi-dot"></i>
+							<i class="devicon-css3-plain colored"></i>
+						</div>
+						<div>
+							<a href="https://drive.google.com/file/d/1_kqwVw7wXfkSyyDnvHQCHVFXmjjXPdLl/view?usp=sharing" target="_blank">
+								<button class="demo-button button-primary">Demo</button>
+							</a>
+							<a href="https://github.com/reshawnlofters/youbudget" target="_blank">
 								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
 							</a>
 						</div>
@@ -166,12 +198,12 @@
 
 				<div class="project-container">
 					<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
-						<img class="project-img" src="images/project-2-img.jpg" alt="project image">
+						<img class="project-image" src="images/project-3-image.jpg" alt="project image">
 					</a>
 					<div class="project-details-container">
 						<h3 class="project-title">Tech Industry Billionaires Data Analysis</h3>
 						<p>
-							Explore an analysis of tech industry billionaire data to gain sector insights.
+							An analysis of tech industry billionaire data to extract sector insights, drive data-driven business strategies, and forecast industry trends.
 						</p>
 						<hr/>
 						<div class="project-tools-container">
@@ -185,7 +217,7 @@
 						</div>
 						<div>
 							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis/blob/main/tech-industry-billionaires-analysis.ipynb" target="_blank">
-								<button class="live-demo-button button-primary">Live Demo</button>
+								<button class="demo-button button-primary">Demo</button>
 							</a>
 							<a href="https://github.com/reshawnlofters/tech-industry-billionaires-analysis" target="_blank">
 								<button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
