docs: update About Me section content
Updated About me section content for improved clarity.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 				<div>
 					<h1 class="section-title">About Me</h1><hr/>
 					<p>
-						I am a third-year Computer Science student at Ontario Tech University with a strong background in data structures, algorithms, logical reasoning, and effective communication, developed through work experiences and projects.
+						I am a third-year Computer Science student at Ontario Tech University, passionate about Software Engineering and solving real-world problems. I have a strong background in data structures, algorithms, logical reasoning, and effective communication, developed through my work experiences and projects.
 						<br><br>
-						I am eager to explore Software Engineering internships to apply my technical skills and knowledge in developing software solutions.
+						I am actively seeking Software Engineering internships to apply my skills and knowledge to develop innovative software solutions.
 					</p>
 					<a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
 						<button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
